Enum role {
  LEARNER
  ADMIN
}

Enum target_level {
  JUNIOR_HIGH
  SENIOR_HIGH
}

Table user {
  id uuid [pk]
  email varchar
  role role
  target_level target_level
  daily_target_questions integer
  learning_streak integer
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table daily_progress {
  id uuid [pk]
  user_id uuid
  date date
  target_questions integer
  answered_questions integer
  correct_questions integer
  wrong_questions integer
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table word_bank {
  id uuid [pk]
  word varchar
  parts_of_speech varchar
  chinese_translation text
  target_level target_level
  difficulty_level integer
  exam_frequency integer
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table quiz_question {
  id uuid [pk]
  word_bank_id uuid
  contextual_cloze text
  chinese_translation text
  correct_answer varchar
  distractor1 varchar
  distractor2 varchar
  distractor3 varchar
  explanation_root_affix text
  explanation_mnemonic text
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table word_mastery {
  id uuid [pk]
  user_id uuid
  word_bank_id uuid
  error_weight integer
  next_review_date timestamp
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table error_event {
  id uuid [pk]
  user_id uuid
  quiz_question_id uuid
  timestamp timestamp
  selected_distractor varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Ref: user.id < daily_progress.user_id [delete: cascade]
Ref: user.id < word_mastery.user_id [delete: cascade]
Ref: user.id < error_event.user_id [delete: cascade]
Ref: word_bank.id < quiz_question.word_bank_id [delete: cascade]
Ref: word_bank.id < word_mastery.word_bank_id [delete: set null]
Ref: quiz_question.id < error_event.quiz_question_id [delete: set null]
